# parse-url

./: PLAN.md  ParseURL.md  README.md  pyproject.toml
.claude/: settings.local.json
src/: cli.py  server.py
src/adapters/: base.py  bilibili.py  douyin.py  kuaishou.py  xiaohongshu.py
src/api/: errors.py  routes.py  schemas.py
src/core/: downloader.py  parser.py  transcriber.py
src/utils/: file.py  http.py  link.py
