[project]
name = "parse-url"
version = "0.1.0"
description = "社交媒体链接解析下载工具 — 输入抖音/哔哩哔哩/快手/小红书等平台的分享链接，自动解析并下载其中的图片、视频及文案信息"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "mlx-whisper>=0.4.0",
]

[project.scripts]
parse-url = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
